test/data/check-unsupported.test
-- Tests for unsupported features


[case testSetLiteral]
{None} # E: Feature not implemented yet (set literal)

[case testListComprehension]
a = [x for x in None]
[out]
main, line 1: Feature not implemented yet (list comprehension) 

[case testConditionalExpression]
a = None if None else None
[out]
main, line 1: Feature not implemented yet (conditional expression) 

[case testGeneratorExpression]
a = (x for x in None) # E: Feature not implemented yet (generator expression) 

[case testDecorator]
@f  # E: Feature not implemented yet (decorator)
def f(x): pass

[case testYield]
any f():
  yield None
[out]
main: In function "f":
main, line 2: Feature not implemented yet (yield statement)

[case testWith]
void f():
  with None:
    pass
[out]
main: In function "f":
main, line 2: Feature not implemented yet (with statement)
